# contact-rs

./: .dockerignore  .env.example  .pre-commit-config.yaml  BUILDING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  build_main.yml  dependency_review.yml  test.yml
src/: cors.rs  hcaptcha.rs  mail.rs  main.rs
