[package]
name = "contact-rs"
version = "0.1.7"
edition = "2021"

[dependencies]
lettre = { version = "0.10.1", features = [ "builder", "smtp-transport" ] }
reqwest = { version = "0.11", features = [ "json" ] }
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
serde = "1.0.146"
validator = { version = "0.16", features = [ "derive" ] }
