[package]
name = "contact-rs"
version = "0.2.8"
edition = "2021"

[dependencies]
lettre = { version = "0.10.4", default-features = false, features = [ "builder", "rustls-tls", "smtp-transport" ] }
reqwest = { version = "0.11", default-features = false, features = [ "json", "rustls-tls" ] }
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
serde = "1.0.188"
validator = { version = "0.16", features = [ "derive" ] }
